--- a/mtconnect/agent/agent.cfg
+++ b/mtconnect/agent/agent.cfg
@@ -3,13 +3,15 @@ AllowPut = true
 ReconnectInterval = 1000
 BufferSize = 17
 SchemaVersion = 1.3
+Port = 5000		# default port number for agent
+UpcaseDataItemValue = false
+MonitorConfigFiles = true		# True = reload devices.xml and agent.cfg if they are changed
 
 Adapters { 
-
-  	GFAgie01 { 
-     	Host = 127.0.0.1
-      	Port = 7879
-   	}
+	GFAgie01 { 
+      	Host = 127.0.0.1
+        Port = 7879
+    }
 		
 	Mazak03 {
 		Host = 127.0.0.1
@@ -35,14 +37,25 @@ Files {
         Location = /SMS-Testbed_logo.png
     }
 }
+
+StreamsNamespaces {
+	x {
+		Urn = urn:nist.gov:NistStreams:1.3
+		Location = /schemas/NistStreams_1.3.xsd
+	}
+}
     
 StreamsStyle {
 	Location = /styles/Streams.xsl
+}
+
+DevicesStyle {
+	Location = /styles/Devices.xsl
 }
   
 # Logger Configuration
 logger_config
 {
-    logging_level = info
-    output = file /var/log/mtc_agent.log
+	logging_level = info
+	output = file /var/log/mtc_agent.log
 }
