--- a/mtconnect/agent/agent.cfg
+++ b/mtconnect/agent/agent.cfg
@@ -1,7 +1,7 @@
 Devices = /etc/mtconnect/agent/Devices.xml
 AllowPut = true
 ReconnectInterval = 1000
-BufferSize = 17
+BufferSize = 20
 SchemaVersion = 1.3
 Port = 5000		# default port number for agent
 UpcaseDataItemValue = false
@@ -9,13 +9,53 @@ MonitorConfigFiles = true		# True = reload devices.xml and agent.cfg if they are
 
 Adapters { 
 	GFAgie01 { 
-      	Host = 127.0.0.1
-        Port = 7879
-    }
-		
+      		Host = localhost
+        	Port = 8001
+    	}
+	
+	Mazak01 {
+		Host = 10.0.10.102
+		Port = 7878
+	}
+
+	Mazak02 {
+		Host = 10.0.10.103
+		Port = 7878
+	}
+	
 	Mazak03 {
-		Host = 127.0.0.1
+		Host = 10.0.10.104
+		Port = 7878
+	}
+
+	Hurco01 {
+		Host = 10.0.10.3
+		Port = 7878
+	}
+
+	Hurco02 {
+		Host = 10.0.10.3
+		Port = 7879
+	}
+
+	Hurco03 {
+		Host = 10.0.10.3
 		Port = 7880
+	}
+
+	Hurco04 {
+		Host = 10.0.10.3
+		Port = 7881
+	}
+
+	Hurco05 {
+		Host = 10.0.10.3
+		Port = 7882
+	}
+
+	Hurco06 {
+		Host = 10.0.10.3
+		Port = 7883
 	}
 }
 
